--- a/hooks/build
+++ b/hooks/build
@@ -1,3 +1,4 @@
 #!/bin/bash
 
-docker build --build-arg PHP_VERSION=$VAR -t $IMAGE_NAME .
+PV=expr ${IMAGE_NAME: -3}
+docker build --build-arg PHP_VERSION=$PV -t $IMAGE_NAME .
