--- a/hooks/build
+++ b/hooks/build
@@ -1,5 +1,4 @@
 #!/bin/bash
 
 PV=${IMAGE_NAME: -3}
-echo $PV
-docker build --build-arg PHP_VERSION=$IMAGE_NAME -t $IMAGE_NAME .
+docker build --build-arg PHP_VERSION=$PV -t $IMAGE_NAME .
