--- a/hooks/build
+++ b/hooks/build
@@ -1,4 +1,4 @@
 #!/bin/bash
 echo "EnvDevPHPBase building..."
-VERSION_INDEX=`expr index "$TEST" :`
+VERSION_INDEX=`expr index "$IMAGE_NAME" :`
 docker build --build-arg PHP_VERSION=${IMAGE_NAME:$VERSION_INDEX} -t $IMAGE_NAME .
