--- a/hooks/build
+++ b/hooks/build
@@ -1,6 +1,14 @@
 #!/bin/bash
 echo "EnvDevPHPBase building..."
 VERSION_INDEX=`expr index "$IMAGE_NAME" :`
-echo "Version ${IMAGE_NAME:$VERSION_INDEX}"
-echo "Build : build --build-arg PHP_VERSION=${IMAGE_NAME:$VERSION_INDEX} -t $IMAGE_NAME ."
-docker build --build-arg PHP_VERSION=${IMAGE_NAME:$VERSION_INDEX} -t $IMAGE_NAME .
+VERSION=${IMAGE_NAME:$VERSION_INDEX}
+echo "Version $VERSION"
+
+if [ VERSION = "latest" ]
+then
+    echo "Build : build -t $IMAGE_NAME ."
+    docker build -t $IMAGE_NAME .
+else
+    echo "Build : build --build-arg PHP_VERSION=$VERSION -t $IMAGE_NAME ."
+    docker build --build-arg PHP_VERSION=$VERSION -t $IMAGE_NAME .
+fi
