--- a/hooks/build
+++ b/hooks/build
@@ -4,7 +4,7 @@ VERSION_INDEX=`expr index "$IMAGE_NAME" :`
 VERSION=${IMAGE_NAME:$VERSION_INDEX}
 echo "Version $VERSION"
 
-if [ VERSION = "latest" ]
+if [ $VERSION = "latest" ]
 then
     echo "Build : build -t $IMAGE_NAME ."
     docker build -t $IMAGE_NAME .
