Fix PHP Fpm configuration in PHP 5.6

--- a/5.6/Dockerfile
+++ b/5.6/Dockerfile
@@ -66,7 +66,7 @@ RUN apk update \
 RUN sed -i "s|;*daemonize\s*=\s*yes|daemonize = no|g" /etc/php5/php-fpm.conf && \
   	sed -i "s|;*listen\s*=\s*127.0.0.1:9000|listen = 9000|g" /etc/php5/php-fpm.conf && \
   	sed -i "s|;*listen\s*=\s*/||g" /etc/php5/php-fpm.conf && \
-    sed -i "s|;*;clear_env\s*=\s*no|clear_env = no|g" /etc/php7/php-fpm.d/www.conf 
+    sed -i "s|;*;clear_env\s*=\s*no|clear_env = no|g" /etc/php5/php-fpm.conf  
 
 EXPOSE 9000
 
