Add PHP extension tokenizer in 7.1 version

--- a/7.1/Dockerfile
+++ b/7.1/Dockerfile
@@ -56,6 +56,7 @@ RUN apk update \
         php7-sysvsem \
         php7-sysvshm \
         php7-tidy \
+        php7-tokenizer \
         php7-wddx \
         php7-xml \
         php7-xmlreader \
