Add XMLWriter PHP extension

--- a/7.1/Dockerfile
+++ b/7.1/Dockerfile
@@ -61,6 +61,7 @@ RUN apk update \
         php7-xml \
         php7-xmlreader \
         php7-xmlrpc \
+        php7-xmlwriter \
         php7-xsl \
         php7-zip \
         php7-zlib \
