--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,13 @@ services:
 env:
   DOCKER_COMPOSE_VERSION: 1.8.1
 
+addons:
+  apt:
+    packages:
+      - docker-ce
+
 before_install:
-  - docker version
+  - docker --version
 
   - docker build -t vfac/envdevphpbase:5.6 -f 5.6/Dockerfile 5.6/
   - docker build -t vfac/envdevphpbase:7.0 -f 7.0/Dockerfile 7.0/
