--- a/.travis.yml
+++ b/.travis.yml
@@ -19,10 +19,10 @@ before_install:
   - docker build -t vfac/envdevphpbase:7.1 -f 7.1/Dockerfile 7.1/
   - docker build -t vfac/envdevphpbase:7.2 -f 7.2/Dockerfile 7.2/
 
-  - docker run --name php5.6 -d $PWD:/var/www/html vfac/envdevphpbase:5.6
-  - docker run --name php7.0 -d $PWD:/var/www/html vfac/envdevphpbase:7.0
-  - docker run --name php7.1 -d $PWD:/var/www/html vfac/envdevphpbase:7.1
-  - docker run --name php7.2 -d $PWD:/var/www/html vfac/envdevphpbase:7.2
+  - docker run --name php5.6 -d -v $PWD:/var/www/html vfac/envdevphpbase:5.6
+  - docker run --name php7.0 -d -v $PWD:/var/www/html vfac/envdevphpbase:7.0
+  - docker run --name php7.1 -d -v $PWD:/var/www/html vfac/envdevphpbase:7.1
+  - docker run --name php7.2 -d -v $PWD:/var/www/html vfac/envdevphpbase:7.2
 
 script:
   - docker exec php5.6 php -v
