--- a/.travis.yml
+++ b/.travis.yml
@@ -3,15 +3,20 @@ sudo: required
 services:
   - docker
 
-env:
-  DOCKER_COMPOSE_VERSION: 1.8.1
-
 addons:
   apt:
     packages:
       - docker-ce
 
+env:
+  DOCKER_COMPOSE_VERSION: 1.8.1
+
 before_install:
+  - sudo rm /usr/local/bin/docker-compose
+  - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
+  - sudo mv docker-compose /usr/local/bin
+  - chmod +x /usr/local/bin/docker-compose
+
   - docker --version
 
   - docker build -t vfac/envdevphpbase:5.6 -f 5.6/Dockerfile 5.6/
@@ -24,27 +29,32 @@ before_install:
   - docker run --name php7.1 -d -v $PWD:/var/www/html vfac/envdevphpbase:7.1
   - docker run --name php7.2 -d -v $PWD:/var/www/html vfac/envdevphpbase:7.2
 
+  - docker-compose -f test/5.6/docker-compose.yml up -d
+  - docker-compose -f test/7.0/docker-compose.yml up -d
+  - docker-compose -f test/7.1/docker-compose.yml up -d
+  - docker-compose -f test/7.2/docker-compose.yml up -d
+
 script:
   - docker exec php5.6 php -v
   - docker exec php5.6 sh -c "php -v | grep 5.6"
-  - docker exec php5.6 sh -c "php -v | grep OPcache"
-  - docker exec php5.6 sh -c "php test/test.php |grep vfac"
+  - docker exec php5.6 sh -c "php test/test.php |grep version"
   - docker exec php5.6 composer --version
+  - curl -s localhost:8056/test.php |grep bcmath
 
   - docker exec php7.0 php -v
   - docker exec php7.0 sh -c "php -v | grep 7.0"
-  - docker exec php7.0 sh -c "php -v | grep OPcache"
-  - docker exec php7.0 sh -c "php test/test.php |grep vfac"
+  - docker exec php7.0 sh -c "php test/test.php |grep version"
   - docker exec php7.0 composer --version
+  - curl -s localhost:8070/test.php |grep bcmath
 
   - docker exec php7.1 php -v
   - docker exec php7.1 sh -c "php -v | grep 7.1"
-  - docker exec php7.1 sh -c "php -v | grep OPcache"
-  - docker exec php7.1 sh -c "php test/test.php |grep vfac"
+  - docker exec php7.1 sh -c "php test/test.php |grep version"
   - docker exec php7.1 composer --version
+  - curl -s localhost:8071/test.php |grep bcmath
 
   - docker exec php7.2 php -v
   - docker exec php7.2 sh -c "php -v | grep 7.2"
-  - docker exec php7.2 sh -c "php -v | grep OPcache"
-  - docker exec php7.2 sh -c "php test/test.php |grep vfac"
+  - docker exec php7.2 sh -c "php test/test.php |grep version"
   - docker exec php7.2 composer --version
+  - curl -s localhost:8072/test.php |grep bcmath
