Move PHP 5.6 standard version Dockerfile Fix GMP module in 5.6 standard version

--- a/5.6/Dockerfile
+++ b/5.6/Dockerfile
@@ -38,6 +38,7 @@ RUN apt-get update && apt-get install -y \
     && docker-php-ext-install -j$(nproc) gd \
     && docker-php-ext-configure ldap --with-libdir=lib/x86_64-linux-gnu/ \
     && docker-php-ext-install ldap \
+    && ln -s /usr/include/x86_64-linux-gnu/gmp.h /usr/include/gmp.h \
     && docker-php-ext-configure gmp --with-gmp=/usr/include/x86_64-linux-gnu \
     && docker-php-ext-install gmp \
     && docker-php-ext-install -j$(nproc) bcmath bz2 calendar ctype curl dba dom enchant exif fileinfo ftp gettext hash iconv \
