--- a/.travis.yml
+++ b/.travis.yml
@@ -37,14 +37,14 @@ before_install:
   - docker run --name php7.1-alpine -d -v $PWD:/var/www/html vfac/envdevphpbase:7.1-alpine
   - docker run --name php7.2-alpine -d -v $PWD:/var/www/html vfac/envdevphpbase:7.2-alpine
 
-  - docker-compose -f test/5.6/docker-compose.yml up -d
-  - docker-compose -f test/7.0/docker-compose.yml up -d
-  - docker-compose -f test/7.1/docker-compose.yml up -d
-  - docker-compose -f test/7.2/docker-compose.yml up -d
-  - docker-compose -f test/5.6/docker-compose-alpine.yml up -d
-  - docker-compose -f test/7.0/docker-compose-alpine.yml up -d
-  - docker-compose -f test/7.1/docker-compose-alpine.yml up -d
-  - docker-compose -f test/7.2/docker-compose-alpine.yml up -d
+  - docker-compose -f test/5.6/docker-compose.yml up -d --build
+  - docker-compose -f test/7.0/docker-compose.yml up -d --build
+  - docker-compose -f test/7.1/docker-compose.yml up -d --build
+  - docker-compose -f test/7.2/docker-compose.yml up -d --build
+  - docker-compose -f test/5.6/alpine/docker-compose.yml up -d --build
+  - docker-compose -f test/7.0/alpine/docker-compose.yml up -d --build
+  - docker-compose -f test/7.1/alpine/docker-compose.yml up -d --build
+  - docker-compose -f test/7.2/alpine/docker-compose.yml up -d --build
 
 script:
   - docker exec php5.6 php -v
