--- a/test/5.6/alpine/nginx/www.conf
+++ b/test/5.6/alpine/nginx/www.conf
@@ -7,7 +7,7 @@ server {
 
     location ~* \.PHP$ {
         fastcgi_index   index.php;
-        fastcgi_pass   fpm_5.6-alpine:9000;
+        fastcgi_pass    56_alpine_fpm_1:9000;
         include         fastcgi_params;
         fastcgi_param   SCRIPT_FILENAME    $document_root$fastcgi_script_name;
     }
