--- a/.travis.yml
+++ b/.travis.yml
@@ -41,10 +41,10 @@ before_install:
   - docker-compose -f test/7.0/docker-compose.yml up -d 
   - docker-compose -f test/7.1/docker-compose.yml up -d
   - docker-compose -f test/7.2/docker-compose.yml up -d 
-  - docker-compose -f test/5.6/alpine/docker-compose.yml up -d 
-  - docker-compose -f test/7.0/alpine/docker-compose.yml up -d 
-  - docker-compose -f test/7.1/alpine/docker-compose.yml up -d 
-  - docker-compose -f test/7.2/alpine/docker-compose.yml up -d 
+  - docker-compose -f test/5.6alpine/docker-compose.yml up -d 
+  - docker-compose -f test/7.0alpine/docker-compose.yml up -d 
+  - docker-compose -f test/7.1alpine/docker-compose.yml up -d 
+  - docker-compose -f test/7.2alpine/docker-compose.yml up -d 
 
 script:
   - docker exec php5.6 php -v
