--- a/test/7.2-alpine-cli/docker-compose.yml
+++ b/test/7.2-alpine-cli/docker-compose.yml
@@ -7,13 +7,13 @@ services:
       dockerfile: nginx/Dockerfile
     depends_on:
       - fpm
-    ports: 
-      - 8171:80
+    ports:
+      - 8172:80
     volumes:
-      - "$PWD/test:/var/www/html"      
+      - "$PWD/test:/var/www/html"
 
   fpm:
-    image: vfac/envdevphpbase:7.1-alpine
+    image: vfac/envdevphpbase:7.2-alpine-cli
     expose:
       - 9000
     volumes:
