--- a/.travis.yml
+++ b/.travis.yml
@@ -19,15 +19,10 @@ before_install:
 
   - docker --version
 
-  - docker build -q -t vfac/envdevphpbase:7.2-alpine .
+  - docker build -q -t vfac/envdevphpbase:7.2-alpine-cli .
 
   - docker run --name php7.2-alpine-cli -d -v $PWD:/var/www/html vfac/envdevphpbase:7.2-alpine-cli
-
-  - docker-compose -f test/7.2-alpine-cli/docker-compose.yml up -d
-
 script:
   - docker exec php7.2-alpine-cli php -v
   - docker exec php7.2-alpine-cli sh -c "php -v | grep 7.2"
-  - docker exec php7.2-alpine-cli sh -c "php test/test.php |grep version"
   - docker exec php7.2-alpine-cli composer --version
-  - curl -s localhost:8172/test.php |grep bcmath
