--- a/.travis.yml
+++ b/.travis.yml
@@ -21,9 +21,7 @@ before_install:
 
   - docker build -q -t vfac/envdevphpbase:7.0-alpine-cli .
 
-  - docker run --name php7.0-alpine-cli -d -v $PWD:/var/www/html vfac/envdevphpbase:7.0-alpine-cli
-
-script:
-  - docker exec php7.0-alpine-cli php -v
-  - docker exec php7.0-alpine-cli sh -c "php -v | grep 7.0"
-  - docker exec php7.0-alpine-cli composer --version
+  script:
+  - docker run --rm -ti vfac/envdevphpbase:7.0-alpine-cli php -v
+  - docker run --rm -ti vfac/envdevphpbase:7.0-alpine-cli sh -c "php -v | grep 7.0"
+  - docker run --rm -ti vfac/envdevphpbase:7.0-alpine-cli composer --version
