--- a/.travis.yml
+++ b/.travis.yml
@@ -19,9 +19,9 @@ before_install:
 
   - docker --version
 
-  - docker build -q -t vfac/envdevphpbase:7.1 .
+  - docker build -q -t vfac/envdevphpbase:7.1-fpm .
 
-  - docker run --name php7.1 -d -v $PWD:/var/www/html vfac/envdevphpbase:7.1
+  - docker run --name php7.1 -d -v $PWD:/var/www/html vfac/envdevphpbase:7.1-fpm
 
   - docker-compose -f test/7.1/docker-compose.yml up -d
 
@@ -30,4 +30,6 @@ script:
   - docker exec php7.1 sh -c "php -v | grep 7.1"
   - docker exec php7.1 sh -c "php test/test.php |grep version"
   - docker exec php7.1 composer --version
+  - docker exec php7.1 nodejs -v
+  - docker exec php7.1 npm -v
   - curl -s localhost:8071/test.php |grep bcmath
